examples/test/testpolicy16547.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16547
  namespace: namespace247
spec:
  podSelector:
    matchLabels:
      key42: value32
      key47: value42
      key26: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value5
          key34: value37
          key43: value39
      podSelector:
        matchLabels:
          key7: value8
          key28: value45
